reworked HTML & basic CSS styling

--- a/index.html
+++ b/index.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <title>Basic Portfolio</title>
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
+
     <body>
-        <header>
-            <h1>Payton Burr</h1>
-            <div class="nav">
-                <ul>
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
+
+    <div class="container">
+        <nav>
+            <div class="name">
+                <h1>Payton Burr</h1>
             </div>
-            <hr>
-        </header>
-        <div class="container">
+            <ul>
+                <li><a href=""></a>About</li>
+                <li><a href=""></a>Portfolio</li>
+                <li><a href=""></a>Contact</li>
+            </ul>
+        </nav>
+
+        <header>
             <h1>About Me</h1>
-            <hr>
-            <img src="http://lorempixel.com/output/city-q-c-200-200-5.jpg" alt="Picture of a city">
+        </header>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque deleniti alias itaque quae. Accusamus magni maxime ad quasi. Similique at minus vero sint doloribus architecto unde repudiandae quidem consequuntur itaque!</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, officia. Quasi eum temporibus esse repellendus sit atque corporis fugiat necessitatibus, quos quidem repudiandae veritatis accusamus earum vel nam est asperiores.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus assumenda at placeat beatae. Vel, labore magnam? Labore voluptates ipsum nostrum nihil odio explicabo delectus! Aut fugit itaque quae eveniet modi!</p>
+        <main>
+            <img src="" alt="">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque quae asperiores, doloremque eum dolor aliquam pariatur delectus laborum doloribus. Laudantium quo inventore dolores beatae eveniet sequi corrupti eius quaerat ipsam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores, enim. Illo totam recusandae reiciendis consequatur nobis placeat saepe, fuga dolorem aliquid laudantium, facilis quasi voluptates quibusdam similique consectetur, sunt commodi.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate consectetur perferendis facilis illo recusandae aut tempore at dolorum placeat quibusdam voluptatem molestias, corrupti dolore voluptas hic id nobis! Nemo, assumenda.</p>
+        </main>
+    </div>
 
-            <footer>
-                <p>Copyright &copy;</p>
-            </footer>
-        </div>
+        <footer>
+            <p>Copyright &copy;</p>
+        </footer>
+        
     </body>
 </html>
