--- a/index.html
+++ b/index.html
@@ -7,33 +7,39 @@
 
     <body>
 
-    <div class="container">
         <nav>
-            <div class="name">
-                <h1>Payton Burr</h1>
+            <div class="nav-container">
+                <div class="name">
+                    <h1>Payton Burr</h1>
+                </div>
+                <ul>
+                    <li><a href="">About <span class="divider"></span></a></li>
+                    <li><a href="#">Portfolio <span class="divider"></span></a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
             </div>
-            <ul>
-                <li><a href=""></a>About</li>
-                <li><a href=""></a>Portfolio</li>
-                <li><a href=""></a>Contact</li>
-            </ul>
         </nav>
+
+    <div class="container">
 
         <header>
             <h1>About Me</h1>
+            <hr>
         </header>
 
         <main>
-            <img src="" alt="">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque quae asperiores, doloremque eum dolor aliquam pariatur delectus laborum doloribus. Laudantium quo inventore dolores beatae eveniet sequi corrupti eius quaerat ipsam.</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores, enim. Illo totam recusandae reiciendis consequatur nobis placeat saepe, fuga dolorem aliquid laudantium, facilis quasi voluptates quibusdam similique consectetur, sunt commodi.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate consectetur perferendis facilis illo recusandae aut tempore at dolorum placeat quibusdam voluptatem molestias, corrupti dolore voluptas hic id nobis! Nemo, assumenda.</p>
+            <img src="assets/images/profile.jpg" alt="Picture of a city">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque quae asperiores, doloremque eum dolor aliquam pariatur delectus laborum doloribus. Laudantium quo inventore dolores beatae eveniet sequi corrupti eius quaerat ipsam.
+            Lorem ilit. Voluptate consectetur perferendis facilis illo recusandae aut tempore at dolorum placeat quibusdam voluptatem molestias, corrupti dolore voluptas hic id nobis! Nemo, assumenda.</p>
+            
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, inventore fugiat saepe sunt mollitia accusantium ab vero ad enim iusto ipsa consequatur, magni quas odit in placeat ipsam iure labore.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis at saepe quam enim optio rem non iste voluptatibus, atque nulla? Ipsa delectus eaque rem eos accusamus nisi iusto nam sapiente!</p>
         </main>
     </div>
 
         <footer>
             <p>Copyright &copy;</p>
         </footer>
-        
+
     </body>
 </html>
