--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Basic Portfolio</title>
+        <title>About me</title>
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
 
@@ -13,9 +13,9 @@
                     <h1>Payton Burr</h1>
                 </div>
                 <ul>
-                    <li><a href="">About <span class="divider"></span></a></li>
-                    <li><a href="#">Portfolio <span class="divider"></span></a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">About <span class="divider"></span></a></li>
+                    <li><a href="portfolio.html">Portfolio <span class="divider"></span></a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -23,7 +23,7 @@
     <div class="container">
 
         <header>
-            <h1>About Me</h1>
+            <h2>About Me</h2>
             <hr>
         </header>
 
