--- a/portfolio.html
+++ b/portfolio.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Portfolio</title>
-        <link rel="stylesheet" href="assets/css/style.css">
-    </head>
 
-    <body>
+<head>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
 
-        <nav>
-            <div class="nav-container">
-                <div class="name">
-                    <h1>Payton Burr</h1>
-                </div>
-                <ul>
-                    <li><a href="index.html">About <span class="divider"></span></a></li>
-                    <li><a href="portfolio.html">Portfolio <span class="divider"></span></a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
+<body>
+
+    <nav>
+        <div class="nav-container">
+            <div class="name">
+                <h1>Payton Burr</h1>
             </div>
-        </nav>
+            <ul>
+                <li><a href="index.html">About <span class="divider"></span></a></li>
+                <li><a href="portfolio.html">Portfolio <span class="divider"></span></a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
 
     <div class="container">
 
@@ -27,19 +28,41 @@
             <hr>
         </header>
 
-        <main>
-            <img src="assets/images/profile.jpg" alt="Picture of a city">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque quae asperiores, doloremque eum dolor aliquam pariatur delectus laborum doloribus. Laudantium quo inventore dolores beatae eveniet sequi corrupti eius quaerat ipsam.
-            Lorem ilit. Voluptate consectetur perferendis facilis illo recusandae aut tempore at dolorum placeat quibusdam voluptatem molestias, corrupti dolore voluptas hic id nobis! Nemo, assumenda.</p>
-            
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, inventore fugiat saepe sunt mollitia accusantium ab vero ad enim iusto ipsa consequatur, magni quas odit in placeat ipsam iure labore.</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis at saepe quam enim optio rem non iste voluptatibus, atque nulla? Ipsa delectus eaque rem eos accusamus nisi iusto nam sapiente!</p>
-        </main>
+        <!-- Images -->
+
+        <div class="wrap">
+            <img src="assets/images/hangman.jpg" alt="Hangman Game">
+            <div class="wrap-center">Hangman Game</div>
+        </div>
+
+        <div class="wrap">
+            <img src="assets/images/rpg.jpg" alt="RPG Game">
+            <div class="wrap-center">RPG Game</div>
+        </div>
+
+        <div class="wrap">
+            <img src="assets/images/trivia.jpg" alt="Trivia Game">
+            <div class="wrap-center">Trivia Game</div>
+        </div>
+
+        <div class="wrap">
+            <img src="assets/images/widget.jpg" alt="Rutgers Widget Info">
+            <div class="wrap-center">Rutgers Widget Info</div>
+        </div>
+
+        <div class="wrap">
+            <img src="assets/images/rps.jpg" alt="Rock Paper Scissors">
+            <div class="wrap-center">Rock Paper Scissors</div>
+        </div>
+
+        <!--  -->
+
     </div>
 
-        <footer>
-            <p>Copyright &copy;</p>
-        </footer>
+    <footer>
+        <p>Copyright &copy;</p>
+    </footer>
 
-    </body>
+</body>
+
 </html>
